# Git-Helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  create_skeleton.py  fix_encoding.py  pyproject.toml
scripts/: build.bat
src/githelper/: __init__.py  __main__.py
src/githelper/app/: __init__.py  events.py  orchestrator.py
src/githelper/common/: __init__.py  constants.py  exceptions.py
src/githelper/diagnostics/: __init__.py  log_config.py  logger.py
src/githelper/domain/: __init__.py  models.py  reminder_scheduler.py  risk_engine.py  time_engine.py
src/githelper/git_integration/: __init__.py  errors.py  git_client.py
src/githelper/monitor/: __init__.py  filesystem_watcher.py  reconciliation_poller.py  repository_monitor.py
src/githelper/persistence/: __init__.py  schema.py  state_store.py
src/githelper/snapshot/: __init__.py  rolling_snapshot_service.py  snapshot_manager.py  snapshot_storage.py
src/githelper/stable_compare/: __init__.py  compare_service.py  stable_manager.py
src/githelper/ui/: __init__.py  (+2 more)
tests/: conftest.py
tests/app/: test_orchestrator.py
tests/domain/: test_models.py  test_reminder_scheduler.py  test_risk_engine.py  test_time_engine.py
tests/git_integration/: test_git_client.py
tests/monitor/: test_filesystem_watcher.py  test_repository_monitor.py
tests/persistence/: test_state_store.py
tests/snapshot/: test_rolling_snapshot_service.py  test_snapshot_manager.py
tests/stable_compare/: test_compare_service.py  test_stable_manager.py
tests/system_state/: test_session_listener.py
tests/ui/: test_tray_icon.py
(+14 files in other folders)
